--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-swagger-gen-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "author": "Maximilian Aulbach",
   "description": "A CLI tool for swagger 2.0 codegen for Angular",
@@ -10,7 +10,8 @@
     "url": "git+https://github.com/spitfjre/ng-swagger-gen-cli.git"
   },
   "scripts": {
-    "format": "prettier --write \"**/*{.js,.json,.md}\""
+    "format": "prettier --write \"**/*{.js,.json,.md}\"",
+    "release": "tsc && npm publish ./"
   },
   "dependencies": {
     "argparse": "^1.0.10",
@@ -21,7 +22,16 @@
     "md5": "^2.2.1",
     "prettier": "^1.17.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/argparse": "^1.0.36",
+    "@types/execa": "^0.9.0",
+    "@types/listr": "^0.13.0",
+    "@types/md5": "^2.1.33",
+    "@types/node": "^11.13.6",
+    "@types/request-promise-native": "^1.0.15",
+    "typescript": "^3.4.4"
   },
   "peerDependencies": {
     "@angular/core": ">=6.0.0",
