--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-swagger-gen-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "license": "MIT",
   "author": "Maximilian Aulbach",
   "description": "A CLI tool for swagger 2.0 codegen for Angular",
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "compile": "node_modules/.bin/tsc",
-    "format": "prettier --write \"**/*{.js,.json,.md}\""
+    "format": "prettier --write \"**/*{.js,.json,.md}\"",
+    "lint": "tslint -p ./"
   },
   "dependencies": {
     "argparse": "^1.0.10",
@@ -31,6 +32,9 @@
     "@types/md5": "^2.1.33",
     "@types/node": "^11.13.6",
     "@types/request-promise-native": "^1.0.15",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.4.4"
   },
   "peerDependencies": {
