--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "endOfLine": "lf",
   "htmlWhitespaceSensitivity": "ignore",
   "printWidth": 120,
+  "quoteProps": "as-needed",
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
