--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-swagger-gen-cli",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "license": "MIT",
   "author": "Maximilian Aulbach",
   "description": "A CLI tool for swagger 2.0 codegen for Angular",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "compile": "node_modules/.bin/tsc",
-    "format": "prettier --write \"**/*{.js,.json,.md}\"",
+    "format": "prettier --write \"**/*{.js,.ts,.json,.md}\"",
     "lint": "tslint -p ./"
   },
   "dependencies": {
@@ -30,8 +30,8 @@
     "@types/execa": "^0.9.0",
     "@types/listr": "^0.13.0",
     "@types/md5": "^2.1.33",
-    "@types/node": "^11.13.6",
-    "@types/request-promise-native": "^1.0.15",
+    "@types/node": "^11.13.8",
+    "@types/request-promise-native": "^1.0.16",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
