--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-swagger-gen-cli",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "license": "MIT",
   "author": "Maximilian Aulbach",
   "description": "A CLI tool for swagger 2.0 codegen for Angular",
@@ -18,24 +18,23 @@
     "argparse": "^1.0.10",
     "chalk": "^2.4.2",
     "execa": "^1.0.0",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.0.1",
+    "json-subset": "^1.0.2",
     "listr": "^0.14.3",
-    "md5": "^2.2.1",
-    "prettier": "^1.17.0",
+    "prettier": "^1.17.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
     "@types/argparse": "^1.0.36",
     "@types/execa": "^0.9.0",
-    "@types/listr": "^0.13.0",
-    "@types/md5": "^2.1.33",
-    "@types/node": "^11.13.8",
+    "@types/listr": "^0.14.0",
+    "@types/node": "^12.0.4",
     "@types/request-promise-native": "^1.0.16",
-    "tslint": "^5.16.0",
+    "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.4.4"
+    "typescript": "^3.5.1"
   },
   "peerDependencies": {
     "@angular/core": ">=6.0.0",
