--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-swagger-gen-cli",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "license": "MIT",
   "author": "Maximilian Aulbach",
   "description": "A CLI tool for swagger 2.0 codegen for Angular",
@@ -11,28 +11,34 @@
   },
   "scripts": {
     "compile": "node_modules/.bin/tsc",
-    "format": "prettier --write \"**/*{.js,.ts,.json,.md}\"",
-    "lint": "tslint -p ./"
+    "format:all": "prettier --write .",
+    "lint": "tslint -p ./",
+    "server": "json-server --watch test/swagger.json",
+    "test:generate": "./ng-swagger-gen-cli generate -i test/ng-swagger-gen-cli.json -s test",
+    "test:generate:all": "./ng-swagger-gen-cli generate -i test/ng-swagger-gen-cli.json",
+    "test:update": "./ng-swagger-gen-cli update -i test/ng-swagger-gen-cli.json -s test",
+    "test:update:all": "./ng-swagger-gen-cli update -i test/ng-swagger-gen-cli.json"
   },
   "dependencies": {
     "argparse": "^1.0.10",
-    "chalk": "^3.0.0",
-    "execa": "^3.4.0",
-    "fs-extra": "^8.1.0",
+    "execa": "^4.0.0",
+    "fs-extra": "^9.0.0",
+    "got": "^10.6.0",
     "listr": "^0.14.3",
-    "prettier": "^1.19.1",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.8"
+    "prettier": "^2.0.1"
   },
   "devDependencies": {
-    "@types/argparse": "^1.0.36",
+    "@angular/core": ">=6.0.0",
+    "@types/argparse": "^1.0.38",
+    "@types/got": "^9.6.9",
     "@types/listr": "^0.14.2",
-    "@types/node": "^12.12.15",
-    "@types/request-promise-native": "^1.0.17",
-    "tslint": "^5.20.1",
+    "@types/node": "^13.9.3",
+    "ng-swagger-gen": ">=1.5.0",
+    "rxjs": ">=6.0.0",
+    "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.7.3"
+    "tslint-plugin-prettier": "^2.2.0",
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "@angular/core": ">=6.0.0",
